# nvidia-day-trading-slim-successor

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.jsonl  Makefile  PLANS.md  POST_GATE225_STALE_GOVERNANCE_TEST_REPAIR_PATCH_CLEAN_2026-04-07.diff  POST_GATE225_STALE_GOVERNANCE_TEST_REPAIR_PATCH_INCREMENTAL_2026-04-07.diff  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
backlog/: feature_backlog_merged.jsonl  legacy_data_fixtures_manifest.jsonl  legacy_feature_backlog.jsonl  legacy_feature_backlog_additions.jsonl  legacy_module_backlog.jsonl  legacy_module_backlog_additions.jsonl  module_backlog_merged.jsonl  remaining_legacy_source_inventory.jsonl  top3_promotion_candidates.jsonl
config/: README.md  coefficient_authority.v1.yaml  coefficients_registry.example.yaml  evaluation_config.example.yaml  playbook_registry.example.yaml  runtime_settings.example.yaml  strategy_variants.example.yaml
docs/: 01_NORMATIVE.md  02_OPERATING_MODEL.md  03_DOMAIN_MODEL.md  04_TECHNICAL_ARCHITECTURE.md  05_GUARDRAILS.md  06_REPO_PROCESS_AND_TRANCHE_LAW.md  07_RUNTIME_SURFACE_OWNERSHIP_AND_DOWNSTREAM_CONSUMER_LEDGER.md  08_TESTING_AND_PROMOTION.md  2026-03-18_NVIDIA_day_trading_project_v1.md  BUILD_PLAN.md  RUNBOOK.md  TESTING_AND_PROMOTION.md
hypothesis/: __init__.pyi  stateful.pyi  strategies.pyi
schemas/: changelog_event.schema.json
scripts/: build_canonical_vocabulary.py  phase0_signal_workbook_audit.py
tests/: _planning_later_state_helpers.py  _successor_pack_helpers.py  contract_chain_fixtures.py  test_api.py  test_boundaries_and_config_surface.py  test_db_seed.py  (+256 more)
(+744 files in other folders)
