[build-system]
requires = ["hatchling>=1.27,<2.0"]
build-backend = "hatchling.build"

[project]
name = "nvidia-day-trading"
version = "0.1.0"
description = "NVDA day trading research and deterministic playbook platform"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
authors = [
  { name = "James D." }
]
dependencies = [
  "alembic>=1.16,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "ibapi>=9.81.1.post1,<10.0",
  "numpy>=2.3,<3.0",
  "openai>=2.0.0,<3.0.0",
  "orjson>=3.11,<4.0",
  "polars>=1.31,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "pyyaml>=6.0.2,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "structlog>=25.4,<26.0",
  "tenacity>=9.1,<10.0",
  "typer>=0.16,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "black==26.3.1",
  "mypy>=1.17,<2.0",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0",
  "pytest-cov>=6.2,<7.0",
  "ruff>=0.12,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nvda_desk"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
plugins = []

[tool.uv]
package = true
